--- a/kadai_015/style.css
+++ b/kadai_015/style.css
@@ -1,10 +1,10 @@
+html{
+  font-size: 20px;
+}
+
 body{
   font-family: "Arial","Meiryo",sans-serif;
   text-align: center;
-}
-
-#basic{
-  font-size: 20px;
 }
 
 .blue{
@@ -17,14 +17,13 @@ body{
 h1{
   font-family: "Josefin Sans", sans-serif;
   font-optical-sizing: auto;
-  font-weight: <weight>;
   font-style: normal;
-  font-size: 2em;
+  font-size: 2rem;
   text-shadow: 1px 1px 2px rgb(71, 65, 65);
   letter-spacing:1.2em;
-  border-bottom: solid 3px gray;
+  border-bottom: solid 3px rgb(115, 115, 114);
 }
 
-#second{
+.text-bold{
   font-weight: bold;
 }
